[package]
name = "chnroutes"
version = "0.1.0"
edition = "2021"

[dependencies]
ipnet = "2.9.0"
reqwest = { version = "0.12.4", features = ["blocking"] }
thiserror = "1.0.61"
enum-tools = "0.5.3"
net-route = "0.4.3"
pollster = "0.3.0"
tokio = { version = "1.38.0", features = ["rt", "macros", "rt-multi-thread"] }
futures-util = "0.3.30"
netdev = "0.27.0"
log = "0.4.21"

clap = { version = "4.5.4", features = ["derive"], optional = true }
colored = { version = "2.1.0", optional = true }
env_logger = { version = "*", optional = true }

[features]
build-binary = ["clap", "colored", "env_logger"]

[lib]
name = "chnroutes"
path = "src/lib.rs"

[[bin]]
name = "chnroutes"
path = "src/main.rs"
required-features = ["build-binary"]

[[example]]
name = "basic"
path = "examples/basic.rs"
