[package]
name = "chnroutes"
version = "0.1.0"
edition = "2021"
authors = ["lxl66566 <lxl66566@gmail.com>"]
description = "Rust version of chnroutes (with more features), to bypass the VPN accessing CN IPs."
homepage = "https://github.com/lxl66566/chnroutes-rs"
repository = "https://github.com/lxl66566/chnroutes-rs"
license = "MIT"
readme = "./README.md"
categories = ["network-programming"]
keywords = ["chnroutes", "VPN", "bypass", "route"]

[dependencies]
ipnet = "2.9.0"
thiserror = "1.0.61"
enum-tools = "0.5.3"
net-route = "0.4.3"
pollster = "0.3.0"
tokio = { version = "1.38.0", features = ["rt", "macros", "rt-multi-thread"] }
futures-util = "0.3.30"
netdev = "0.27.0"
log = "0.4.21"
tap = "1.0.1"
# openssl = { version = "0.10.64", features = ["vendored"] }

clap = { version = "4.5.4", features = ["derive"], optional = true }
colored = { version = "2.1.0", optional = true }
env_logger = { version = "0.11.3", optional = true }

[dependencies.reqwest]
version = "0.12.4"
features = ["blocking", "rustls-tls"]
default-features = false

[profile.release]
strip = true
lto = true
panic = "abort"
opt-level = "z"

[features]
build-binary = ["clap", "colored", "env_logger"]

[lib]
name = "chnroutes"
path = "src/lib.rs"

[[bin]]
name = "chnroutes"
path = "src/main.rs"
required-features = ["build-binary"]

[[example]]
name = "basic"
path = "examples/basic.rs"
